# Library-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  config.py  models.py
app/api/: main.py
app/generation/: __init__.py  rag.py
app/ingestion/: chunking.py  loaders.py
app/retrieval/: __init__.py  hybrid.py
app/services/: library_rag.py  metadata_store.py  vector_embedding_service.py  vector_index_service.py  vector_search_service.py  vector_store_manager.py
app/static/: app.js  index.html  styles.css
data/raw/: sample_books.json  sample_faq.md
data/templates/: book_import_template.csv
tests/: test_config_and_vector_store.py  test_hybrid_retrieval.py  test_loaders.py  test_models.py
