[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "library-agent-rag"
version = "0.1.0"
description = "Smart campus library RAG question answering system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.1",
  "python-dotenv>=1.0.1",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "langchain>=0.2.16",
  "langchain-community>=0.2.16",
  "langchain-core>=0.2.38",
  "langchain-text-splitters>=0.2.4",
  "langchain-openai>=0.1.25",
  "pymilvus>=2.4.5",
  "pypdf>=4.2.0",
  "rank-bm25>=0.2.2",
  "numpy>=1.26.4",
  "sentence-transformers>=3.0.1",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0"]

[tool.setuptools]
packages = ["app"]
